--- a/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/css/main.css
+++ b/sprint-2/10-DOM/exercise_working-with-dom/shopping-list/css/main.css
@@ -22,11 +22,21 @@
 }
 
 body {
-    background:var(--bg-primary) ;
+    background: var(--bg-primary);
     font-family: var(--font-family);
 }
 
-.container{
+.main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+    width: 100%;
+    max-width: 1200px;
+    margin: 30px auto;
+}
+
+.container {
     display: grid;
     grid-template-columns: 1fr 2fr;
     width: 90%;
@@ -39,6 +49,12 @@ body {
     color: var(--color-success);
 }
 
+.main-container #title {
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+}
+
 .list-container {
     display: flex;
     flex-direction: column;
@@ -46,8 +62,14 @@ body {
 }
 
 .shopping-list {
-    width: 100%;;
-    margin-bottom: 15px;;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+#groceries {
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 .list-item {
@@ -59,7 +81,8 @@ body {
     width: 100%;
     border-radius: 2px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    margin-bottom: 10px;;
+    margin-bottom: 10px;
+    ;
 }
 
 .complete {
@@ -67,12 +90,12 @@ body {
     color: var(--color-complete);
 }
 
-
 .quantity-container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .super {
     display: inline-block;
     font-size: .5em;
