--- a/sprint-2/11-handling-events/exercises/shopping-list/css/main.css
+++ b/sprint-2/11-handling-events/exercises/shopping-list/css/main.css
@@ -5,6 +5,7 @@
     --color-light: #ffffff;
     --color-danger: #ff0000;
     --color-danger-hover: #df0000;
+    --color-danger-bg: #ebd3d3;
     --color-warning: rgb(255, 162, 0);
     --color-success: rgb(140, 187, 41);
     --bg-primary: #e2e2e2;
@@ -22,16 +23,16 @@
 }
 
 body {
-    background:var(--bg-primary) ;
+    background: var(--bg-primary);
     font-family: var(--font-family);
 }
 
-.container{
+.container {
     display: grid;
     grid-template-columns: 1fr 2fr;
     width: 90%;
     margin: 50px auto;
-    gap: 10px;
+    gap: 30px;
     align-items: flex-start;
 }
 
@@ -46,8 +47,8 @@ body {
 }
 
 .shopping-list {
-    width: 100%;;
-    margin-bottom: 15px;;
+    width: 100%;
+    margin-bottom: 15px;
 }
 
 .list-item {
@@ -59,7 +60,7 @@ body {
     width: 100%;
     border-radius: 2px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    margin-bottom: 10px;;
+    margin-bottom: 10px;
 }
 
 .complete {
@@ -73,6 +74,7 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
 .super {
     display: inline-block;
     font-size: .5em;
@@ -91,4 +93,13 @@ body {
 .btn:hover {
     background-color: var(--color-danger-hover);
 
+}
+
+.error-msg {
+    font-size: .8em;
+    color: var(--color-danger-hover);
+}
+
+.error {
+    box-shadow: inset 0 0 10px var(--color-danger-bg), 0 0 7px var(--color-danger-hover);
 }
