--- a/sprint-2/12_javascript-and-thymeleaf/exercise_javascript-and-thymeleaf/src/main/resources/templates/products/index.html
+++ b/sprint-2/12_javascript-and-thymeleaf/exercise_javascript-and-thymeleaf/src/main/resources/templates/products/index.html
@@ -18,26 +18,30 @@
 <body>
     <script src="/js/products-list.js"></script>
     <div th:replace="fragments/header.html :: nav"></div>
-    <main class="container mt-4">
-        <h4>Products:
-            <select name="category" id="category" class="form-select">
-                <option th:value="0" th:disabled="disabled" th:selected="${currentCategory.categoryId} == 0">
-                    --Select Category--
-                </option>
-                <option th:each="category:${categories}" th:value="${category.categoryId}"
-                    th:text="${category.categoryName}"
-                    th:selected="${category.categoryId} == ${currentCategory.categoryId}"></option>
-            </select>
-        </h4>
+    <main class="d-flex flex-column align-items-center gap-3 p-5">
+        <h1>Products</h1>
 
-        <a th:href="@{/products/new}">New</a>
-        <table class="table table-striped">
+        <select name="category" id="category" class="form-select mb-2">
+            <option th:value="0" th:disabled="disabled" th:selected="${currentCategory.categoryId} == 0">
+                --Select Category--
+            </option>
+            <option th:each="category:${categories}" th:value="${category.categoryId}"
+                th:text="${category.categoryName}"
+                th:selected="${category.categoryId} == ${currentCategory.categoryId}"></option>
+        </select>
+
+        <a th:href="@{/products/new}" class="btn btn-outline-secondary">Add new product</a>
+
+        <h4 th:if="${#lists.isEmpty(products)}" id="products-msg">Please select category to display products</h4>
+
+        
+        <table class="table table-striped table-hover w-auto table-responsive" id="products-table">
             <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>Product</th>
-                    <th>Price</th>
-                    <th></th>
+                    <th width="20%">Id</th>
+                    <th width="40%">Product</th>
+                    <th width="20%">Price</th>
+                    <th width="20%"></th>
                 </tr>
             </thead>
             <tbody id="product-container">
