--- a/sprint-2/12_javascript-and-thymeleaf/exercise_javascript-and-thymeleaf/src/main/resources/templates/products/details.html
+++ b/sprint-2/12_javascript-and-thymeleaf/exercise_javascript-and-thymeleaf/src/main/resources/templates/products/details.html
@@ -10,7 +10,7 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 <div th:replace="fragments/header.html :: nav"></div>
