--- a/sprint-2/12_javascript-and-thymeleaf/exercise_javascript-and-thymeleaf/src/main/resources/templates/products/add.html
+++ b/sprint-2/12_javascript-and-thymeleaf/exercise_javascript-and-thymeleaf/src/main/resources/templates/products/add.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+    <script src="/js/product-add.js" ></script>
+
     <div th:replace="fragments/header.html :: nav"></div>
     <main class="container mt-4">
         <h4>Add Product</h4>
@@ -28,7 +30,7 @@
         </div>
 
         <form action="#" th:action="@{/products/new}" th:object="${product}" method="post" novalidate
-            th:class="${isInvalid} ? 'was-validated' : ''">
+            th:class="${isInvalid} ? 'was-validated' : ''" id="add-product-form">
 
             <div class="row mb-2">
                 <label class="col-sm-2 col-form-label" th:for="*{productName}">Product Name</label>
