--- a/sprint-2/12_javascript-and-thymeleaf/exercise_javascript-and-thymeleaf/src/main/resources/templates/products/index.html
+++ b/sprint-2/12_javascript-and-thymeleaf/exercise_javascript-and-thymeleaf/src/main/resources/templates/products/index.html
@@ -16,7 +16,10 @@
 </head>
 
 <body>
-    <script src="/js/products-list.js"></script>
+    <!-- <script src="/js/products-list.js"></script> -->
+
+    <script src="/js/products-list-dom.js"></script>
+
     <div th:replace="fragments/header.html :: nav"></div>
     <main class="d-flex flex-column align-items-center gap-3 p-5">
         <h1>Products</h1>
@@ -32,7 +35,7 @@
 
         <a th:href="@{/products/new}" class="btn btn-outline-secondary">Add new product</a>
 
-        <h4 th:if="${#lists.isEmpty(products)}" id="products-msg">Please select category to display products</h4>
+        <h4 id="products-msg">Please select category to display products</h4>
 
         
         <table class="table table-striped table-hover w-auto table-responsive" id="products-table">
