--- a/sprint-3/09-javascript-and-apis/pokemon-api-react-app/src/App.css
+++ b/sprint-3/09-javascript-and-apis/pokemon-api-react-app/src/App.css
@@ -9,7 +9,7 @@
 .cards-container {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
     gap: 2rem;
 }
@@ -18,21 +18,31 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 
-    width: 200px;
+    width: 220px;
+    height: 360px;
+    min-height: 360px;
     padding: 1rem;
+}
+
+.card-title {
+    text-align: center;
 }
 
 .card_img {
     width: 160px;
 }
 
+.details-title {
+    font-weight: bold;
+}
+
 .btns-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 3rem;
+    gap: 2rem;
 
     padding: 2rem;
 }
