--- a/sprint-3/11-react-hooks/exercise_react-hooks/src/components/categories/category-card/CategoryCard.css
+++ b/sprint-3/11-react-hooks/exercise_react-hooks/src/components/categories/category-card/CategoryCard.css
@@ -1,6 +1,30 @@
 .category-card {
     cursor: pointer;
+    transition: all 0.3s ease;
 }
+
 .category-card:hover {
-    background-color: antiquewhite;
+    border: solid 1px #a2a2a2;
+    box-shadow: 0 0 6px #a2a2a2;
+}
+
+.hover-zoom img {
+    transition: transform 0.3s ease;
+}
+
+.category-card:hover img {
+    transform: scale(1.1);
+}
+
+.icon {
+    color: #AEA79F;
+    /*secondary color*/
+}
+
+.hover-info:hover {
+    color: #17A2B8;
+}
+
+.hover-danger:hover {
+    color: #DF382C;
 }
