--- a/sprint-3/11-react-hooks/exercise_react-hooks/src/components/header/Header.css
+++ b/sprint-3/11-react-hooks/exercise_react-hooks/src/components/header/Header.css
@@ -4,24 +4,27 @@
     background-color: #e2e2e2;
     padding: 10px;
     padding-bottom: 5px;
-  }
-  
-  #navigation img {
+}
+
+#navigation img {
     height: 50px;
-    margin-top: -5px;;
-  }
-  
-  #navigation h1 {
+    margin-top: -5px;
+    ;
+}
+
+#navigation h1 {
     padding: 0 !important;
     margin: 0 !important;
-  }
-  .link
-  {
+}
+
+.link {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s ease;
     cursor: pointer;
-  }
-  .link:hover {
-    background-color: cornsilk;
-  }
+}
+
+.link:hover {
+    color: #17A2B8;
+}
